--- a/notebooks/research.ipynb
+++ b/notebooks/research.ipynb
@@ -91,6 +91,127 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "\n",
+    "class customexception(Exception):\n",
+    "    def __init__(self,error_message,error_details:sys):\n",
+    "        self.error_message = error_message\n",
+    "        _,_,exc_tb = error_details.exc_info()\n",
+    "        \n",
+    "        self.lineno=exc_tb.tb_lineno\n",
+    "        self.file_name=exc_tb.tb_frame.f_code.co_filename \n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return \"Error occured in python script name [{0}] line number [{1}] error message [{2}]\".format(\n",
+    "        self.file_name, self.lineno, str(self.error_message))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "C:\\Users\\AMRITA\\AppData\\Local\\Temp\\ipykernel_6576\\4063518222.py\n",
+      "division by zero\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    a=1/0\n",
+    "except Exception as e:\n",
+    "    _,_,exc_tb=sys.exc_info()\n",
+    "    print(exc_tb.tb_lineno)\n",
+    "    print(exc_tb.tb_frame.f_code.co_filename)\n",
+    "          \n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class customexception(Exception):\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'e' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m customexception(\u001b[43me\u001b[49m,sys)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'e' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "raise customexception(e,sys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(None, None, None)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sys.exc_info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.makedirs(os.path.join(\"artifacts\",\"raw.csv\"),exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
